--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,11 +1,11 @@
 .nav {
   /* flex box layout */
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
 
   margin: 0 0 30px;
-  background-color: #00acb0;
+  /* background-color: #00acb0; */
   overflow: hidden;
 }
 
@@ -14,10 +14,11 @@
 }
 
 .nav-title {
+  text-align: center;
   font-size: 24px;
   font-weight: 700;
-  color: #f2f2f2;
-  padding-left: 10px;
+  color: black;
+  padding: 10px;
   margin: 0;
 }
 
