--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,28 +1,51 @@
-.nav {
-  /* flex box layout */
+/* .nav {
+  flex box layout;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   align-items: center;
 
   margin: 0 0 30px;
-  /* background-color: #00acb0; */
+  background-color: #00acb0;
   overflow: hidden;
-}
+} */
 
-.nav a {
+/* .nav a {
   text-decoration: none;
-}
+} */
 
 .nav-title {
+  font-family: 'Playfair Display', serif;
   text-align: center;
-  font-size: 24px;
-  font-weight: 700;
+  font-size: 40px;
+  font-weight: 800;
+  /* font-style: italic; */
+  color: black;
+  padding: 10px;
+  margin: 0;
+}
+.nav-title em{
+  font-family: 'Playfair Display', serif;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 400;
+  font-style: italic;
   color: black;
   padding: 10px;
   margin: 0;
 }
 
-.navLink {
+.nav-subtitle{
+  font-family: 'Playfair Display', serif;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 400;
+  font-style: italic;
+  color: black;
+  padding: 10px;
+  margin: 0;
+}
+
+/* .navLink {
   display: inline-block;
   color: #f2f2f2;
   background-color: #00acb0;
@@ -31,8 +54,6 @@
   text-decoration: none;
   font-size: 15px;
 
-  /* these last two make the logout button in
-  the nav bar look like another link */
   border: none;
   cursor: pointer;
   outline: 0;
@@ -40,4 +61,4 @@
 
 .navLink:hover {
   background-color: #008183;
-}
+} */
