fixed getEvents sql query to format date and get friend_name. minor styling

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -19,7 +19,7 @@
   font-size: 40px;
   font-weight: 800;
   /* font-style: italic; */
-  color: black;
+  color: #883955;
   padding: 10px;
   margin: 0;
 }
