--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,13 +18,35 @@ img {
   max-width: 100%;
 }
 
-/* --------------------------------------------------------------------------------
-Container
--------------------------------------------------------------------------------- */
+.display_title {
+  margin: auto;
+  padding-top: 10px;
+}
 
 .container {
   padding: 20px;
+  margin: auto;
 }
+
+.standard {
+  text-align: center;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin: auto;
+}
+
+.form_title {
+  padding-right: 15px;
+  padding-left: 38px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto;
+}
+
+/* .info {
+  font-size: 20px;
+  color: #e01616;
+} */
 
 /* --------------------------------------------------------------------------------
 Button
@@ -33,10 +55,9 @@ Button
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border-color: #014041;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
+  background-color: #08605F;
   color: #f8f8f8;
   font-size: 1.1rem;
   outline: 0;
@@ -59,7 +80,7 @@ Button
 }
 
 .btn:hover {
-  background-color: #008183;
+  background-color: #698f80;
   text-decoration: none;
 }
 
